--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body{
 #header{
      background:#080808;
     color:#ffff;
-    background-image: url(images/background.jpg);
+    background-image: url(background.jpg);
     background-size:cover; 
    
 
 }
 .container{
-    background: url(images/background.jpg);
+    background: url(background.jpg);
     background-size:cover;
     margin: 0px;
     padding: 0; 
@@ -162,7 +162,7 @@ nav{
 /* -----------portfolio--------------------- */
 #portfolio{
     padding: 50px 0;
-    background: url(images/background.jpg);
+    background: url(background.jpg);
     background-size:cover; 
 
 }
@@ -327,7 +327,7 @@ nav .fas{
 }
 @media only screen and (max-width:600px){
     #header{
-        background-image: url(images/59276.jpg);
+        background-image: url(background.jpg);
     }
     .header-text{
         margin-top: 100%;
